responsiveness and overflow bug on .deactiveSlide

--- a/static/css/projects.scss
+++ b/static/css/projects.scss
@@ -94,43 +94,7 @@ section.project_images{
         font-family: Arial;
         margin-bottom: 10px;
     }
-    div.images_container{
-        position: relative;
-        height:70%;
-        width:100%;
-        overflow: hidden;
-        div.project_slider{
-            position: relative;
-            height:100%;
-            width:100%;
-            overflow: hidden;
-            div.imageCover{
-                position: absolute;
-                height:100%;
-                width:100%;
-                text-align: center;
-                img{
-                    position: relative;
-                    height: 100%;
-                    width:auto;
-                }
-            }
-            .activeSlide{
-                position: relative;
-                left:0%;
-                top:0px;
-                display: inline-block;
-                animation:1s showSlide 0s ease-in;
-            }
-            .deactiveSlide{
-                position: relative;
-                left:-100%;
-                top:0px;
-                display: inline-block;
-                animation:1s hideSlide 0s ease-in;
-            }
-        }
-    }
+ 
     div.controlls{
         text-align: center;
     }
@@ -143,9 +107,54 @@ section.project_images{
     }
 }
 
+
+
+
+div.images_container{
+    position: relative;
+    height:70%;
+    width:100%;
+    overflow: hidden;
+    div.project_slider{
+        position: relative;
+        height:100%;
+        width:100%;
+        overflow: hidden;
+       
+}
+
+div.imageCover{
+    position: absolute;
+    height:100%;
+    width:100%;
+    text-align: center;
+    img{
+        position: relative;
+        height: 100%;
+        width:auto;
+    }
+}
+.activeSlide{
+    position: relative;
+    left:0%;
+    top:0px;
+    display: inline-block;
+    animation:1s showSlide 0s ease-in;
+}
+.deactiveSlide{
+    position: relative;
+    left:-200%;
+    top:0px;
+    display: inline-block;
+    animation:1s hideSlide 0s ease-in;
+}
+}
+
+
 div.imageLoading{
     position: relative;
     @include center;
+    z-index:10;
     height:100px;
     width:100px;
     animation: 2s loading 0s infinite ease-in;
@@ -172,11 +181,13 @@ div.imageLoading{
     }
 }
 @keyframes hideSlide{
-    from{
+    0%{
         left:0%;
+        display: inline-block;
     }
-    to{
+    90%{
         left:-100%;
+        display: none;
     }
 }
 
@@ -184,5 +195,11 @@ div.imageLoading{
 @media only screen and (max-width:700px){
     div.project{
         margin-bottom:30px;
+    }
+    div.imageCover{
+        img{
+            width:100%;
+            height: auto;
+        }
     }
 }
